data/derived/fa15/progs/unify/prog0604.ml.out
Characters 29-30:
  let abs x = if x < 0.0 then -x else x;;
                               ^
Error: This expression has type float but an expression was expected of type
         int
